--- a/frontend/packages/editor/src/editor.css
+++ b/frontend/packages/editor/src/editor.css
@@ -13,8 +13,6 @@
 /* recommendation from Haz: https://twitter.com/diegohaz/status/1591829631811846147 */
 .link,
 .hm-link {
-  word-wrap: break-word;
-  word-break: break-all;
   text-decoration-line: underline;
   text-underline-offset: 0.2em;
   text-decoration-skip-ink: none;
